# mdls

./: README.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: extension.ts
mdls_server/: Cargo.toml
mdls_server/main/: Cargo.toml
mdls_server/main/src/: main.rs
mdls_server/providers/primus/: Cargo.toml
mdls_server/providers/primus/src/: completion_parser.rs  components.rs  definition_parser.rs  expression_parser.rs  hover.rs  lib.rs  scriptproperties.rs  systems.rs  type_annotations.rs
mdls_server/providers/primus/tests/: tests.rs
mdls_server/reference/: methods.ron
mdls_server/reference/test_ref/: md_namespace_basic.xml
properties_gen/: Cargo.toml
properties_gen/src/: main.rs
properties_gen/src/reference/: scriptproperties.xml
rust-server/: Cargo.toml
rust-server/src/: completion_parser.rs  components.rs  data_store.rs  definition_parser.rs  error_handling.rs  expression_parser.rs  hover.rs  macros.rs  main.rs  scriptproperties.rs  systems.rs  tests.rs  type_annotations.rs  type_checker.rs  world_trigger.rs
rust-server/src/reference/: events.ron  methods.ron
rust-server/src/reference/test_ref/: md_namespace_basic.xml
server/: package-lock.json  package.json
