[package]
name = "properties_gen"
version = "0.1.0"
authors = ["mewosmith <48843615+mewosmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.11.0"
ron = "0.6.0"
serde = "1.0.110"